2005-10-21  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (logview_create_model_no_date):
	* logrtns.c: (log_open): Please don't crash.

2005-10-21  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (calendar_mark_dates), (calendar_init_data),
	(calendar_month_changed), (calendar_day_selected),
	(calendar_select_date), (calendar_connect), (calendar_init),
	(calendar_class_init), (calendar_get_type), (calendar_new):
	* calendar.h:
	* log_repaint.c: (selection_changed_cb):
	* logrtns.h:
	* logview.c: (logview_init), (logview_calendar_set_state): Make
	the calendar a subclass of a GtkCalendar.
	* logrtns.h (struct): There's actually no need to store the date
	for every log line.

2005-10-21  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (logview_create_model):
	* logrtns.c: (logline_get_date_string), (logline_new_from_string),
	(string_get_date_string), (log_read_dates), (log_close):
	* misc.c: (string_get_date): Play well with extra spaces.

2005-10-21  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (model_fill_iter): Calls to strftime are very
	time-consuming, so cache the time values over several lines. Cut
	rendering time in half.
	* logrtns.c (log_stats_new): Combine log checking and stats
	grabbing, so we don't get the GnomeVFSFileInfo twice.

2005-10-21  Vincent Noel  <vnoel@cox.net>

	* info.c (loginfo_repaint): Use the new day info.
	* logrtns.h (struct LogStats): Remove enddate and stardate.
	(struct _log): Remove has_dates.
	* logrtns.c (log_close): Free the new Day stuff.
	* logrtns.c (log_read_dates): Be faster when parsing the log lines
	for dates.

2005-10-20  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (read_marked_dates), (init_calendar_data),
	(calendar_month_changed), (log_find_day), (calendar_day_selected),
	(calendar_day_selected_double_click): * calendar.h: * info.c:
	(loginfo_repaint): * log_repaint.c: (row_toggled_cb),
	(selection_changed_cb),
	(logview_update_statusbar), (model_fill_date_iter),