@@ -1,5 +1,10 @@
 2005-10-21  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.c: Use GArrays, it simplifies a lot the memory handling
+	when monitoring.
+
+2005-10-21  Vincent Noel  <vnoel@cox.net>
+
 	* log_repaint.c: (logview_create_model_no_date):
 	* logrtns.c: (log_open): Please don't crash.
 
